# openapi-translator

./: .cursor-project  .gitignore  Cargo.toml  README.md
.VSCodeCounter/2024-10-14_19-25-26/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-10-14_19-25-42/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
resources/generic-visitors/: codegen.lua  prelude.lua
resources/generic-visitors/tags/: visitSpecTag.lua
resources/java-spring-boot/: parts.lua  target.lua
resources/scripts/java/: prelude.lua
resources/target-java-spring-boot/: code.lua  target.lua
resources/target-java-spring-boot/variants/: default.lua  transactional.lua
resources/visitors-c-like-code/: codegen.lua  prelude.lua  visitSpecEnd.lua  visitSpecExternalDocs.lua
resources/visitors-c-like-code/components/: visitComponentsEnd.lua  visitComponentsStart.lua
resources/visitors-c-like-code/info/: visitSpecInfoContact.lua  visitSpecInfoEnd.lua  visitSpecInfoLicense.lua  visitSpecInfoStart.lua
resources/visitors-c-like-code/paths/: visitPathsEnd.lua  visitPathsStart.lua
resources/visitors-c-like-code/tags/: visitSpecTag.lua  visitSpecTagsEnd.lua  visitSpecTagsStart.lua
resources/visitors/cbase/: init.lua  prelude.lua  struct.lua  (+3 more)
src/: lib.rs  main.rs
src/enums/: common.rs
src/holders/: context.rs
src/services/: cli.rs  code.rs  comparators.rs  references.rs  schema.rs  scripts.rs  visitors.rs
src/structs/: common.rs
src/traits/: common.rs
(+731 files in other folders)
