[package]
name = "openapi-translator"
version = "0.1.0"
edition = "2021"

[dependencies]
mlua = { version = "0.9.9", features = [
    "lua54",
    "vendored",
    "send",
    "async",
    "serialize",
] }
openapiv3 = "2.0.0"
serde_yaml = "0.9.34+deprecated"
once_cell = "1.19.0"
env_logger = "0.11.5"
log = "0.4.22"
anyhow = "1.0.86"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
clap = { version = "4.5.17", features = ["derive"] }
url = { version = "^2.5", features = ["serde"] }
reqwest = { version = "0.12.7", features = ["blocking"] }
json-pointer = "0.3.4"
uritemplate-next = "0.2.0"
uriparse = "0.6.4"
diffy = "0.4.0"
chrono = "0.4.38"
ansi_term = "0.12.1"
indexmap = "2.5.0"
